[package]
name = "sn_dbc"
version = "2.15.0"
description = "Safe Network DBC"
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_dbc"
documentation = "https://docs.rs/sn_dbc"
keywords = [ "Safe", "Network", "SafeNetwork", "SafeUrl", "XorUrl" ]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
edition = "2018"

[features]
serdes = [ "serde", "ringct-serde" ]
ringct-serde = [ "blst_ringct/serde" ]

[dependencies]
thiserror = "1.0.24"
blsttc = "5.1.2"
blst_ringct = {git = "https://github.com/maidsafe/blst-ringct"}
hex = "0.4.3"
tiny-keccak = {version = "2.0.0", features = [ "sha3" ]}
serde = {version = "1.0.133", features = [ "derive", "rc" ], optional = true}

[dev-dependencies]
quickcheck_macros = "1"
quickcheck = "1.0.3"
anyhow = "1.0.40"
rustyline = "8.0.0"
bincode = "1.3.3"
criterion = "0.3.5"

  [dev-dependencies.pprof]
  version = "0.7.0"
  features = [ "flamegraph" ]

[dev-dependencies.sn_dbc]
path = "."
features = [ "serdes" ]

[target."cfg(unix)".dev-dependencies]
termios = "0.3.3"

[[bench]]
name = "reissue"
harness = false

[[example]]
name = "mint-repl"
path = "examples/mint-repl/mint-repl.rs"
