[package]
name = "sn_dbc"
version = "6.0.0"
description = "Safe Network DBC"
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_dbc"
documentation = "https://docs.rs/sn_dbc"
keywords = [ "Safe", "Network", "SafeNetwork", "SafeUrl", "XorUrl" ]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
edition = "2018"

[features]
serdes = [ "serde", "ringct-serde" ]
ringct-serde = [ "bls_ringct/serde" ]
mock = [ ]

[dependencies]
bincode = "1.3.3"
blsttc = "6.0.0"
bls_ringct = "0.2.1"
hex = "0.4.3"
thiserror = "1.0.24"

  [dependencies.serde]
  version = "1.0.133"
  features = [ "derive", "rc" ]
  optional = true

  [dependencies.tiny-keccak]
  features = [ "sha3" ]
  version = "2.0.0"

[dev-dependencies]
anyhow = "1.0.40"
criterion = "0.3.5"
quickcheck_macros = "1"
quickcheck = "1.0.3"
rustyline = "8.0.0"

  [dev-dependencies.sn_dbc]
  path = "."
  features = [ "serdes", "mock" ]

[target."cfg(unix)".dev-dependencies]
termios = "0.3.3"

  [target."cfg(unix)".dev-dependencies.pprof]
  version = "0.7.0"
  features = [ "flamegraph" ]

[[bench]]
name = "reissue"
harness = false

[[example]]
name = "mint-repl"
path = "examples/mint-repl/mint-repl.rs"
